opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/gluten"
bug-reports: "https://github.com/anmonteiro/gluten/issues"
dev-repo: "git+https://github.com/anmonteiro/gluten.git"
doc: "https://anmonteiro.github.io/gluten/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {>= "1.0"}
  "gluten" {= version}
  "faraday-async" {>= "0.7.2"}
  "async" { >= "v0.14.0" }
  "core" { >= "v0.14.0" }
]
depopts: ["async_ssl"]
synopsis: "Async runtime for gluten"
