opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/gluten"
bug-reports: "https://github.com/anmonteiro/gluten/issues"
dev-repo: "git+https://github.com/anmonteiro/gluten.git"
doc: "https://anmonteiro.github.io/gluten/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "gluten" {= version}
  "dune" {>= "1.0"}
  "lwt"
]
synopsis: "Lwt-specific runtime for gluten"
