opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/gluten"
bug-reports: "https://github.com/anmonteiro/gluten/issues"
dev-repo: "git+https://github.com/anmonteiro/gluten.git"
doc: "https://anmonteiro.github.io/gluten/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt"
  "gluten-lwt" {= version}
  "conduit-mirage" {>= "2.0.2"}
  "mirage-flow" {>= "2.0.0"}
  "cstruct"
  "dune" {>= "1.0"}
  "lwt"
]
synopsis: "Mirage support for gluten"
