(library
 (name gluten_lwt_unix)
 (public_name gluten-lwt-unix)
 (libraries
  faraday-lwt-unix
  gluten-lwt
  lwt.unix
  (select
   ssl_io.ml
   from
   (lwt_ssl -> ssl_io.real.ml)
   (-> ssl_io.dummy.ml))
  (select
   tls_io.ml
   from
   (tls.lwt -> tls_io.real.ml)
   (-> tls_io.dummy.ml)))
 (modules gluten_lwt_unix tls_io ssl_io))
